# git-iris

./: .gitignore  CHANGELOG.md  CONFIG.md  Cargo.toml  README.md  TODO.md  git-iris.1
.cargo/: config.toml
.github/workflows/: cicd.yml
docs/: context-extraction-docs.md  file-analyzers-docs.md  git-iris-architecture.md  git-llm-architecture.md  usage-guide.md
scripts/: release.py
src/: change_analyzer.rs  changelog.rs  changelog_prompts.rs  claude_provider.rs  cli.rs  commands.rs  common.rs  config.rs  context.rs  git.rs  gitmoji.rs  instruction_presets.rs  interactive.rs  lib.rs  llm.rs  llm_provider.rs  logger.rs  main.rs  messages.rs  openai_provider.rs  prompt.rs  provider_registry.rs  readme_reader.rs  relevance.rs  service.rs  token_optimizer.rs  tui_commit.rs  ui.rs
src/changes/: change_analyzer.rs  changelog.rs  cli.rs  common.rs  mod.rs  models.rs  prompt.rs  readme_reader.rs  releasenotes.rs
src/commit/: cli.rs  mod.rs  models.rs  prompt.rs  relevance.rs  service.rs
src/file_analyzers/: c.rs  cpp.rs  gradle.rs  java.rs  javascript.rs  json.rs  kotlin.rs  markdown.rs  mod.rs  python.rs  rust.rs  toml.rs  yaml.rs
src/llm_providers/: claude.rs  claude_provider.rs  mod.rs  ollama.rs  openai.rs  openai_provider.rs  provider_registry.rs  test.rs
src/tui/: app.rs  input_handler.rs  mod.rs  spinner.rs  state.rs  ui.rs
tests/: changelog_integration_tests.rs  changelog_prompts_tests.rs  changelog_tests.rs  file_analyzers_tests.rs  git_hooks_tests.rs  git_tests.rs  gitmoji_tests.rs  lib.rs  llm_tests.rs  prompt_tests.rs  service_tests.rs  test_changelog_prompts.rs  token_optimizer_tests.rs
