[package]
name = "git-iris"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive", "cargo"] }
tokio = { version = "1.39.2", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
anyhow = "1.0.86"
toml = "0.8.16"
dirs = "5.0.1"
regex = "1.10.5"
colored = "2.1.0"
dialoguer = "0.11.0"
console = "0.15.8"
tempfile = "3.10.1"
git2 = "0.19.0"
indicatif = "0.17.8"
async-trait = "0.1.81"
enum-map = "2.7.3"
"mockall" = "0.13.0"
"lazy_static" = "1.5.0"
"chrono" = "0.4.38"
"once_cell" = "1.19.0"
"textwrap" = "0.16.1"
"rand" = "0.8.5"
"unicode-width" = "0.1.9"