[package]
name = "git-iris"
version = "0.2.0"
edition = "2021"
authors = ["Stefanie Jane <stef@hyperbliss.tech>"]
description = "AI-assisted Git workflow"
readme = "README.md"
homepage = "https://github.com/hyperb1iss/git-iris"
repository = "https://github.com/hyperb1iss/git-iris"
license = "Apache-2.0"
keywords = ["git", "commit", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
clap = { version = "4.5.11", features = ["derive", "cargo"] }
tokio = { version = "1.39.2", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
anyhow = "1.0.86"
toml = "0.8.16"
dirs = "5.0.1"
regex = "1.10.5"
colored = "2.1.0"
dialoguer = "0.11.0"
console = "0.15.8"
tempfile = "3.10.1"
git2 = "0.19.0"
indicatif = "0.17.8"
async-trait = "0.1.81"
enum-map = "2.7.3"
"mockall" = "0.13.0"
"lazy_static" = "1.5.0"
"chrono" = "0.4.38"
"once_cell" = "1.19.0"
"textwrap" = "0.16.1"
"rand" = "0.8.5"
"unicode-width" = "0.1.13"
"walkdir" = "2.5.0"
"tiktoken-rs" = "0.5.9"
strum = "0.26.3"
strum_macros = "0.26.4"


[package.metadata.deb]
maintainer = "Stefanie Jane <stef@hyperbliss.tech>"
copyright = "2024, Git-Iris Contributors <https://github.com/hyperb1iss/git-iris>"
license-file = ["LICENSE", "4"]
extended-description = """
Git-Iris is an AI-powered tool designed to generate meaningful and context-aware Git commit messages.
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/git-iris", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/git-iris/README", "644"],
    ["git-iris.1", "usr/share/man/man1/git-iris.1", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/git-iris", dest = "/usr/bin/git-iris", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/git-iris/README", mode = "644" },
    { source = "git-iris.1", dest = "/usr/share/man/man1/git-iris.1", mode = "644" },
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "git_iris"
path = "src/lib.rs"

[[bin]]
name = "git-iris"
path = "src/main.rs"

